--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Календарь мероприятий Института ДПО ВГАУ</title>
+    <title>Квиз-плиз</title>
     <meta name="description" content="Календарь мероприятий для ветеринаров, работников сельского хозяйства, преподавателей и студентов. Повышение квалификации, конференции, семинары в ВГАУ.">
     <meta name="keywords" content="событийный календарь, Event календарь, календарь событий, календарь вгау, мероприятия вгау, график мероприятий, скачать календарь, план-график, календарь мероприятий, ветеринария, сельское хозяйство, агрообразование, ВГАУ, повышение квалификации, конференции, семинары, аграрный университет, обучение, ДПО, для преподавателей, для студентов, для фермеров, для ветеринаров, Иваново, сельские жители, городские жители">
     <meta name="author" content="Институт ДПО ВГАУ">
     <meta property="og:title" content="Календарь мероприятий Института ДПО ВГАУ">
-    <meta property="og:description" content="Мероприятия для ветеринаров, работников сельского хозяйства и преподавателей. Повышение квалификации в ВГАУ.">
+    <meta property="og:description" content="Интеллектульная викторина по базовым вопросам безопасности обращения с борщевиком Сосновского">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://dpo.v-gau.ru/calendar">
     <title>Борщевик: Миф или Реальность</title>
@@ -104,8 +104,11 @@
 		</div>
         </div>
     </div>		
-			<p>* * *</p>
-			<p>© НПО "Артель", 2025 | Для экологического просвещения</p>
+	<p>* * *</p>
+	<a href="https://vgau.edu37.ru/calendar/" class="footer-link" target="_blank" rel="noopener noreferrer">
+                Здесь много интересных мероприятий для повышения своей квалификации</a>
+	<p>* * *</p>
+	<p>© НПО "Артель", 2025 | Для экологического просвещения</p>
         </footer>
     </div>
 
