--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Календарь мероприятий для ветеринаров, работников сельского хозяйства, преподавателей и студентов. Повышение квалификации, конференции, семинары в ВГАУ.">
     <meta name="keywords" content="событийный календарь, Event календарь, календарь событий, календарь вгау, мероприятия вгау, график мероприятий, скачать календарь, план-график, календарь мероприятий, ветеринария, сельское хозяйство, агрообразование, ВГАУ, повышение квалификации, конференции, семинары, аграрный университет, обучение, ДПО, для преподавателей, для студентов, для фермеров, для ветеринаров, Иваново, сельские жители, городские жители">
     <meta name="author" content="Институт ДПО ВГАУ">
-    <meta property="og:title" content="Квиз-плиз">
     <meta property="og:description" content="Интеллектульная викторина по базовым вопросам безопасности обращения с борщевиком Сосновского">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://dpo.v-gau.ru/calendar">
     <title>Борщевик: Миф или Реальность</title>
+    <meta property="og:title" content="Борщевик: Миф или Реальность">
+	<meta property="og:description" content="Проверь свои знания о самом опасном растении России! Интерактивная викторина с 25 вопросами">
+	<meta property="og:image" content="https://www.tursar.ru/uploads/img2362_1.jpg">
+	<meta property="og:url" content="https://artmotor.github.io/heracleum-game/">
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="Борщевик.NET">
+	
+	<!-- Для Telegram (дополнительно) -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:title" content="Борщевик: Миф или Реальность">
+	<meta property="twitter:description" content="Интерактивная викторина о борщевике">
+	<meta property="twitter:image" content="https://www.tursar.ru/uploads/img2362_1.jpg">
     <link rel="shortcut icon" href="https://static.tildacdn.com/tild6163-6637-4330-a661-633362306233/favicon.ico" type="image/x-icon" /> 
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
