--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="событийный календарь, Event календарь, календарь событий, календарь вгау, мероприятия вгау, график мероприятий, скачать календарь, план-график, календарь мероприятий, ветеринария, сельское хозяйство, агрообразование, ВГАУ, повышение квалификации, конференции, семинары, аграрный университет, обучение, ДПО, для преподавателей, для студентов, для фермеров, для ветеринаров, Иваново, сельские жители, городские жители">
+    <meta name="keywords" content="сельское хозяйство, агрообразование, ВГАУ, повышение квалификации, конференции, семинары, аграрный университет, обучение, ДПО, для преподавателей, для студентов, для фермеров, для ветеринаров, Иваново, сельские жители, городские жители">
     <meta name="author" content="Институт ДПО ВГАУ">
     <meta property="og:description" content="Интеллектульная викторина по базовым вопросам безопасности обращения с борщевиком Сосновского">
     <meta property="og:type" content="website">
     <title>Борщевик: Миф или Реальность</title>
     <meta property="og:title" content="Борщевик: Миф или Реальность">
-	<meta property="og:description" content="Проверь свои знания о самом опасном растении России! Интерактивная викторина с 25 вопросами">
 	<meta property="og:image" content="https://www.tursar.ru/uploads/img2362_1.jpg">
 	<meta property="og:url" content="https://artmotor.github.io/heracleum-game/">
 	<meta property="og:type" content="website">
@@ -20,7 +19,7 @@
 	<meta property="twitter:title" content="Борщевик: Миф или Реальность">
 	<meta property="twitter:description" content="Интерактивная викторина о борщевике">
 	<meta property="twitter:image" content="https://www.tursar.ru/uploads/img2362_1.jpg">
-    <link rel="shortcut icon" href="https://static.tildacdn.com/tild6163-6637-4330-a661-633362306233/favicon.ico" type="image/x-icon" /> 
+    <link rel="shortcut icon" href="https://static.tildacdn.com/tild6163-6637-4330-a661-633362306233/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -94,7 +93,7 @@
             <div class="footer-container">
         <div class="footer-left">
             <div class="footer-social">
-				<a href="https://t.me/vgaudpo" target="_blank" rel="noopener noreferrer">
+		<a href="https://t.me/vgaudpo" target="_blank" rel="noopener noreferrer">
                     <img src="https://static.tildacdn.com/tild3532-3534-4430-b662-346535353530/Telegram.svg" alt="Telegram" class="social-icon">
                 </a>
 			<a href="https://dpo.v-gau.ru/programs/sosnowskys-hogweed" class="footer-link" target="_blank" rel="noopener noreferrer">
