--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="website">
     <title>Борщевик: Миф или Реальность</title>
     <meta property="og:title" content="Борщевик: Миф или Реальность">
-	<meta property="og:image" content="https://www.tursar.ru/uploads/img2362_1.jpg">
+	<meta property="og:image" content="https://www.plantarium.ru/dat/plants/4/409/818409_e0ddfd61.jpg">
 	<meta property="og:url" content="https://artmotor.github.io/heracleum-game/">
 	<meta property="og:type" content="website">
 	
@@ -16,7 +16,7 @@
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:title" content="Борщевик: Миф или Реальность">
 	<meta property="twitter:description" content="Интерактивная викторина о борщевике">
-	<meta property="twitter:image" content="https://www.tursar.ru/uploads/img2362_1.jpg">
+	<meta property="twitter:image" content="https://www.plantarium.ru/dat/plants/4/409/818409_e0ddfd61.jpg">
     <link rel="shortcut icon" href="https://static.tildacdn.com/tild6163-6637-4330-a661-633362306233/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
