--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
     </div>		
 	<p>* * *</p>
-	<a href="https://vgau.edu37.ru/calendar/" class="footer-link" target="_blank" rel="noopener noreferrer">
+	<a href="https://vgau.edu37.ru/" class="footer-link" target="_blank" rel="noopener noreferrer">
                 Здесь много интересных мероприятий для повышения своей квалификации</a>
 	<p>* * *</p>
 	<p>© НПО "Артель", 2025 | Для экологического просвещения</p>
